tests/baselines/reference/classExpressionES62.errors.txt
tests/cases/conformance/es6/classExpressions/classExpressionES62.ts(2,15): error TS9003: 'class' expressions are not currently supported.


==== tests/cases/conformance/es6/classExpressions/classExpressionES62.ts (1 errors) ====
    class D { }
    var v = class C extends D {};
                  ~
!!! error TS9003: 'class' expressions are not currently supported.